# aria2-shell

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  DELIVERY_CHECKLIST.md  DEPLOY.md  DEVELOPMENT.md  Dockerfile  INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.en.md  README.md  design-task-uimd  design-task.md  index.html  start-dev.sh  verify-setup.sh
.github/workflows/: build.yml  package.yml
aria2/: aria2.conf
common/: aria2.d.ts  task.ts  types.ts
docker/: entrypoint.sh
mock-server/: package-lock.json  package.json
mock-server/src/: data.ts  server.ts  types.ts
nginx/: nginx.conf
server/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-api.http  tsconfig.json  tsup.config.ts
server/src/: aria2Client.ts  aria2Connection.ts  aria2Manager.ts  authMiddleware.ts  cli.ts  db.ts  server.ts  store.ts  userService.ts  utils.ts
server/src/routes/: aria2.ts  auth.ts  filesystem.ts  proxy.ts  user.ts
server/src/types/: aria2.d.ts  user.d.ts
src/: app.rs  main.rs  styles.css
src/components/: layout.rs  mod.rs  new_task_dialog.rs  sidebar.rs  status_bar.rs  task_card.rs  task_list.rs  toolbar.rs
src/models/: download.rs
src/services/: aria2.rs  mod.rs
src/store/: download_store.rs  mod.rs
web/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: aria2Client.ts  client.ts
web/src/components/: ActionButtons.vue  AddTaskDialog.vue  BottomStats.vue  ConfirmDialog.vue  ProgressBar.vue  (+12 more)
(+49 files in other folders)
